...
                              color: Colors.white,
                              size: 48,
                            ),
                          ),
                          const SizedBox(height: 24),
                          const Text(
                            'MesclaInvest',
                            style: TextStyle(
                              fontSize: 56,
                              height: 1,
                              color: Colors.white,
                              fontWeight: FontWeight.w700,
                            ),
...
                                style: TextButton.styleFrom(
                                  shape: RoundedRectangleBorder(
                                    borderRadius: BorderRadius.circular(16),
                                  ),
                                ),
                                child: const Text(
                                  'Continuar',
                                  style: TextStyle(
                                    fontSize: 16,
                                    height: 1.5,
                                    color: Colors.white,
                                    fontWeight: FontWeight.w600,
                                  ),
...
